# k1core

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  dump_db.sql  pyproject.toml
blocks/: admin.py  models.py  schemas.py
blocks/api/: block.py
blocks/migrations/: 0001_initial.py  0002_alter_block_number_alter_block_unique_together.py
blocks/routers/: block.py
common/: admin.py  constants.py  exceptions.py  models.py  schemas.py  tasks.py  utils.py
common/clients/: coin_market_cap_client.py  http_block_chair_client.py
common/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  celery.py  urls.py
config/settings/: base.py  celery.py
providers/: admin.py  constants.py  models.py  schemas.py
providers/api/: provider.py
providers/migrations/: 0001_initial.py
providers/routers/: provider.py
users/: admin.py  constants.py  jwt.py  models.py  schemas.py
users/api/: auth.py  user.py
users/dependencies/: auth.py
users/migrations/: 0001_initial.py
users/routers/: auth.py  user.py
